--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Пвповпвпвпвпвлпвлдплвдвплвп</h1>
+    <h1>Уважаемые пользователи образовательного портала ИГХТУ!
+1. Обучающиеся получают учетную запись автоматически, при наличии корректного адреса электронной почты, предоставленного в деканат. Если письмо с инструкцией по входу в систему не пришло на указанный адрес электронной почты, воспользуйтесь формой восстановления пароля https://edu.isuct.ru/login/forgot_password.php, указав во втором поле формы ваш email. Если письмо по-прежнему не приходит (проверьте папку "Спам"), обратитесь в деканат и убедитесь в корректности адреса электронной почты.
+
+2. Если в процессе восстановления пароля система сообщает, что существует несколько записей с одним адресом электронной почты - напишите письмо на почту edu@isuct.ru, указав Ф.И.О. и номер студенческого билета.
+
+3. Если вы забыли логин или пароль, воспользуйтесь формой восстановления https://edu.isuct.ru/login/forgot_password.php
+
+4. Если курс, к которому вам необходим доступ, требует для записи кодовое слово - обратитесь к своему преподавателю. 
+
+5. Доступ сотрудников к образовательному порталу осуществляется по служебной записке от заведующего кафедрой на имя начальника управления информатизации.</h1>
   </body>
 </html>
